@@ -1,8 +1,13 @@
 1.5 alpha 1
 ===========
-(K. Nakagami)
-- SF Patch #1621889 ] for SF Bug #1606789 - When collection is deleted, mapped item remains in community
+(Christophe Destin)
+- SF Patch #1582754 CreateAdministrator for dummies
+  Creation of admin via [dspace]/bin/create-administrator for a given email, irrespective of the email
+  belonging to an allready registered user.
 
+(K. Nakagami)
+- SF Patch #1621889 for SF Bug #1606789 When collection is deleted, mapped item remains in community
+   
 1.4.1 final
 ===========
 (Tim Donohue)
